--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,10 @@
 	box-sizing: border-box;
 }
 
+html, body {
+	height: 100%;
+}
+
 body {
 	font-family: "Dosis", sans-serif;
   	font-optical-sizing: auto;
@@ -33,7 +37,9 @@ body {
 header {
 	text-align: center;
 	padding: 40px 20px;
+	border-radius: 15px;
 	margin-bottom: 30px;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 	background-color: rgba(255, 255, 255, .8)
 }
 
@@ -42,7 +48,7 @@ h1{
   	font-weight: 400;
 	font-style: normal;
 	font-optical-sizing: auto;
-	margin-bottom:10px;
+	margin-bottom: 10px;
 	font-size: 3.5rem
 }
 
@@ -50,13 +56,13 @@ h1{
 .tagline {
 	font-size: 1.2rem;
 	color: #4a9e9e
-	weight: 200;
+	weight: 300;
 }
 
 .content {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 30px;
+	gap: 20px;
 	margin-bottom: 40px
 }
 
@@ -73,7 +79,7 @@ h1{
 .card {
 	background-color: rgba(255, 255, 255, 0.85);
 	border-radius: 15px;
-	padding: 25px;
+	padding: 30px;
 	margin-bottom: 25px;
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05)
 }
@@ -84,7 +90,7 @@ h2 {
   	font-weight: 400;
   	font-style: normal;
 	color: #2a7a7a;
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 	font-size: 1.8rem;
 	border-bottom: 2px solid PaleTurquoise;
 	padding-bottom:8px;
@@ -92,6 +98,10 @@ h2 {
 
 .image-section{
 	text-align: center;
+	min-height: 400px;
+	display: flex;
+	flex-dirction: column;
+	justify-content: center;
 }
 
 .flower-img{
@@ -99,6 +109,7 @@ h2 {
 	border-radius: 10px;
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 	margin-bottom: 15px;
+	height: 250px;
 }
 
 .caption {
@@ -111,7 +122,7 @@ h2 {
 }
 
 .hobbies-list li {
-	padding: 8px 0;
+	padding: 12px 0;
     border-bottom: 1px dashed #b3e0e0;
     display: flex;
     align-items: center;
@@ -132,7 +143,7 @@ h2 {
     border-left: 4px solid PaleTurquoise;
     padding: 20px;
     border-radius: 0 10px 10px 0;
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 .assignment-list {
