--- a/asg7/styles.css
+++ b/asg7/styles.css
@@ -87,6 +87,10 @@ body {
   padding: 20px;
 }
 
+a {
+  text-decoration: underline;
+}
+
 h1 {
   font-family: "Audiowide", sans-serif;
   font-weight: 400;
