--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -101,9 +101,9 @@ small,
   font-size: 0.64em;
 }
 
-/* Links */
+/* Chosen Domain */
 a {
-  color: #EF709D;
+  color: #FF4083;
   text-decoration: none;
 }
 
