--- a/asg8/styles.css
+++ b/asg8/styles.css
@@ -110,7 +110,7 @@ a {
 
 /* Layout */
 .page-header {
-  background-color: #62F2FF;
+  background-color: #C3FAFF;
   color: #1D2A4A;
   padding: 2em;
   text-align: center;
