--- a/Midterm/styles.css
+++ b/Midterm/styles.css
@@ -182,7 +182,7 @@ main {
   font-weight: 700;
 }
 
-/* Changed the factoid alignment to match each other */
+/* Changed the factoid text alignment to match each other */
 .factoid {
   background-color: #00A0B0;
   color: #FFFFFF;
