--- a/asg11/styles.css
+++ b/asg11/styles.css
@@ -49,7 +49,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Alkatra', sans-serif;
   font-weight: 400;
   line-height: 1.65;
   margin: 0;
@@ -77,7 +77,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Alkatra', sans-serif;
   font-weight: 600;
   line-height: 1.15;
   margin-bottom: 0.5em;
