--- a/asg11/styles.css
+++ b/asg11/styles.css
@@ -78,7 +78,7 @@ h3,
 h4,
 h5 {
   font-family: 'Alkatra', sans-serif;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.15;
   margin-bottom: 0.5em;
 }
@@ -90,7 +90,7 @@ h1,
   font-weight: 700;
   margin-top: 0;
   font-size: 3.05em;
-  color: #ffcb1f;
+  color: #000000;
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
@@ -99,9 +99,9 @@ h1,
 h2,
 .text-size-h2 {
   font-size: 2.44em;
-  color: #2c3e50;
+  color: #00e025;
   font-family: 'Alkatra', sans-serif;
-  font-weight: 700;
+  font-weight: 400;
 }
 
 /* H3 styling */
