--- a/asg11/styles.css
+++ b/asg11/styles.css
@@ -90,7 +90,7 @@ h1,
   font-weight: 700;
   margin-top: 0;
   font-size: 3.05em;
-  color: #000000;
+  color: #ffcb1f;
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
@@ -99,7 +99,7 @@ h1,
 h2,
 .text-size-h2 {
   font-size: 2.44em;
-  color: #00e025;
+  color: #000000;
   font-family: 'Alkatra', sans-serif;
   font-weight: 400;
 }
