--- a/asg11/styles.css
+++ b/asg11/styles.css
@@ -41,6 +41,14 @@
   font-weight: 700;
   src: url('fonts/alkatra-v5-latin-700.woff2') format('woff2');
 }
+/* actor-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Actor';
+  font-style: normal;
+  font-weight: 400;
+  src: url('fonts/actor-v18-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 
 /* FLUID TYPE SCALE & BASE TYPOGRAPHY */
 
@@ -49,7 +57,7 @@ html {
 }
 
 body {
-  font-family: 'Alkatra', sans-serif;
+  font-family: 'Actor', sans-serif;
   font-weight: 400;
   line-height: 1.65;
   margin: 0;
@@ -77,7 +85,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Alkatra', sans-serif;
+  font-family: 'Actor', sans-serif;
   font-weight: 400;
   line-height: 1.15;
   margin-bottom: 0.5em;
